--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-<script src="http://code.jquery.com/jquery.min.js"></script>
-<link href="http://getbootstrap.com/dist/css/bootstrap.css" rel="stylesheet" type="text/css" />
-<script src="http://getbootstrap.com/dist/js/bootstrap.js"></script>
+<script src="js/jquery.min.js"></script>
+<link href="css/bootstrap.css" rel="stylesheet" type="text/css" />
+<script src=js/bootstrap.js"></script>
   <meta charset="utf-8">
   <title>Good Time Calculator</title>  
 </head>
