--- a/index.html
+++ b/index.html
@@ -2,9 +2,7 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<script src="js/jquery.min.js"></script>
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css" />
-<script src=js/bootstrap.js"></script>
   <meta charset="utf-8">
   <title>Good Time Calculator</title>  
 </head>
@@ -49,5 +47,8 @@
     </form>
     <div id="result"></div>
 </div>
+<script src="js/jquery.min.js"></script>
+<script src="js/bootstrap.js"></script>
+<script src="js/good-time.js"></script>
 </body>
 </html>
