Add function to interpret user inputted dates

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 <div class="container">
+    <h1>Good Time Calculator</h1>
     <form role="form">
     <div class="form-group">
         <label for="days">Length of sentence</label>
