--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Good Time Calculator</title>  
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css" />
-<link href="css/toastr.css" rel="stylesheet" type="text/css" />
+<link href="css/toastr.min.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
 <div class="container">
