Add disclaimer language

--- a/index.html
+++ b/index.html
@@ -53,9 +53,14 @@
         </select>
     </div>
         
-    <button type="submit" class="btn btn-default">Calculate Good Time</button>
+    <div class="form-group">
+    <button type="submit" class="btn btn-primary">Calculate Good Time</button>
+    <button class="btn btn-default calc-redo">Redo</button>
+    </div>
     </form>
-<! insert dislaimer ->
+    <div class="center-block">
+        <a class="disclaimer" href="#">Disclaimer</a>
+    </div>
 </div>
 <script src="js/jquery.min.js"></script>
 <script src="js/bootstrap.js"></script>
