--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
     <div class="form-group">
     <button type="submit" class="btn btn-primary">Calculate Good Time</button>
     <button class="btn btn-default calc-redo">Redo</button>
+    <a class="help" href="#">Help</a>  
     </div>
     </form>
     <div class="center-block">
