Clean up UI elements

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     
     <div class="form-group">
         <label for "violence">Was it a crime of violence? <span class="spacer">...</span>
-        <a href="definitions.html#define-crimes-violence"><span class="glyphicon glyphicon-question-sign"></span></a></label>
+        <a href="definitions.html#define-crimes-violence"><span class="glyphicon glyphicon-search"> Lookup</span></a></label>
         <select class="form-control" id="violence">
         <option value="true">Yes</option>
         <option value="false" selected=selected>No</option>
@@ -51,7 +51,7 @@
 
     <div class="form-group">
         <label for "sex">Was it a sex offense? <span class="spacer">...</span>
-        <a href="definitions.html#define-sex-offenses"><span class="glyphicon glyphicon-question-sign"></span></a></label>
+        <a href="definitions.html#define-sex-offenses"><span class="glyphicon glyphicon-search"> Lookup</span></a></label>
         <select class="form-control" id="sex">
         <option value="true">Yes</option>
         <option value="false" selected=selected>No</option>
