--- a/help.html
+++ b/help.html
@@ -23,7 +23,7 @@
     <p>Please note that if the offender was sentenced as a habitual offender under La. R.S. 15:529.1, they will not 
     receive good time</p>
 
-    <h2 id="disclaimer"><span class="back-nav glyphicon glyphicon-chevron-left"></span> Disclaimer</h2>
+    <h3 id="disclaimer"> Disclaimer</h3>
     <p>This app is for informational purposes only and should not be considered legal advice.
     Determinations about good time are made by the La. Department of Corrections only. Their determinations
     may differ from the information provided here.</p>
